# eink_diary

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: markdown_first_page.md  prd.md  preview.md  rfc.md  test.md  working.md
experiments/: README.md
experiments/style_exploration_20260605/: README.md
experiments/today_e2e_20260606/: README.md
experiments/today_e2e_v3_20260606/: README.md
experiments/yesterday_8moments_20260605/: README.md
prompts/: 01_today_poster.md  02_field_guide.md  03_isometric_room.md  04_journey_map.md  05_desk_flatlay.md  06_stamp_sheet.md  07_city_skyline.md  08_recipe_card.md  09_constellation.md  10_board_game.md  README.md
scripts/: build_preview.py  deploy_display.sh  run_display_pi.sh
server/: __init__.py  app.py  display.py  image_ops.py
skills/: eink_diary.md
src/eink_diary/: __init__.py  cli.py  collector.py  config.py  markdown_page.py  pipeline.py  synthesize.py
src/eink_diary/imagegen/: __init__.py  cli.py  core.py
src/eink_diary/sources/: __init__.py  ai_sessions.py  base.py  resend.py  wechat.py
tests/: test_ai_sessions_source.py  test_cli.py  test_collector.py  test_config.py  test_imagegen_core.py  test_markdown_page.py  test_pipeline.py  test_preview.py  test_resend_source.py  test_server_app.py  test_server_image_ops.py  test_synthesize.py  test_wechat_source.py
