[project]
name = "eink-diary"
version = "0.1.0"
description = "墨记 — 彩色电子纸视觉日记：把最近近况采集、理解、生成为一幅画刷到 E-Ink"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
eink-diary = "eink_diary.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
