[project]
name = "eink-diary"
version = "0.1.0"
description = "墨记 — 彩色电子纸视觉日记：把最近近况采集、理解、生成为一幅画刷到 E-Ink"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10,<12",
    "google-genai>=1.73.1,<2",
    "openai>=1.60,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pillow>=10", "fastapi>=0.110", "httpx>=0.27", "python-multipart>=0.0.9"]
# Pi 上部署 display server 装这个组：
server = ["fastapi>=0.110", "uvicorn>=0.27", "pillow>=10", "python-multipart>=0.0.9"]

[project.scripts]
eink-diary = "eink_diary.cli:main"
eink-diary-image = "eink_diary.imagegen.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
